--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-tools:context=".MainActivity">
-<data>
-    <variable
-        name="user"
-        type="com.goldrushcomputing.databindingtutorial.model.User"/>
-</data>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
 
-<LinearLayout
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@{user.name}"/>
-</LinearLayout>
+    <data>
+
+        <variable
+            name="user"
+            type="com.goldrushcomputing.databindingtutorial.model.User" />
+
+        <variable
+            name="handler"
+            type="com.goldrushcomputing.databindingtutorial.MainActivity" />
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{user.name}" />
+
+        <Button
+            android:id="@+id/sendButton"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:onClick="@{handler::onClickSend}"
+            android:text="SEND" />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> handler.onClickInvite(user)}"
+            android:text="INVITE" />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:onClick="@{(view) -> handler.onClickLike(user)}"
+            android:text="LIKE" />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:onClick="@{(view) -> handler.onClickShare(view, user)}"
+            android:text="SHARE" />
+    </LinearLayout>
 </layout>
 
