--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     tools:context=".MainActivity">
 
     <data>
-
         <variable
             name="user"
             type="com.goldrushcomputing.databindingtutorial.model.User" />
@@ -19,6 +18,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:imageUrl="@{user.profileImageUrl}"
+            />
 
         <TextView
             android:layout_width="wrap_content"
