--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,16 @@
         <variable
             name="handler"
             type="com.goldrushcomputing.databindingtutorial.MainActivity" />
+
+        <import type="android.view.View"/>
     </data>
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:padding="10dp"
+        >
 
         <ImageView
             android:layout_width="100dp"
@@ -25,22 +29,21 @@
             app:imageUrl="@{user.profileImageUrl}"
             />
 
-
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{user.name}"
+            android:text="@{@string/nameFormat(user.firstName, user.lastName)}"
             android:textSize="20sp"
             app:font="@{`AppleGaramond-BoldItalic.ttf`}"
+            android:textColor="@{user.isFriend ? @color/colorFriend : @color/colorStranger}"
             />
 
-        <Button
-            android:layout_width="300dp"
+        <CheckBox
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="SEND"
-            android:onClick="@{handler::onClickSend}"
-            app:font="@{`Roboto-Bold.ttf`}"
-            />
+            android:text="Is my friend"
+            android:checked="@{user.isFriend}"
+            android:onClick="@{() -> handler.onCheckFriend(user)}" />
+
 
         <Button
             android:layout_width="300dp"
@@ -48,6 +51,16 @@
             android:text="INVITE"
             android:onClick="@{() -> handler.onClickInvite(user)}"
             app:font="@{`Roboto-Bold.ttf`}"
+            android:visibility="@{user.isFriend ? View.GONE : View.VISIBLE}"
+            />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="SEND"
+            android:onClick="@{handler::onClickSend}"
+            app:font="@{`Roboto-Bold.ttf`}"
+            android:visibility="@{user.isFriend ? View.VISIBLE : View.GONE}"
             />
 
         <Button
@@ -56,6 +69,7 @@
             android:text="LIKE"
             android:onClick="@{(view) -> handler.onClickLike(user)}"
             app:font="@{`Roboto-Bold.ttf`}"
+            android:visibility="@{user.isFriend ? View.VISIBLE : View.GONE}"
             />
 
         <Button
@@ -64,6 +78,7 @@
             android:text="SHARE"
             android:onClick="@{(view) -> handler.onClickShare(view, user)}"
             app:font="@{`Roboto-Bold.ttf`}"
+            android:visibility="@{user.isFriend ? View.VISIBLE : View.GONE}"
             />
     </LinearLayout>
 
