--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
 
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{@string/nameFormat(user.firstName, user.lastName)}"
+            android:text="@{@string/nameFormat(user.firstName, user.lastName, user.nickname)}"
             android:textSize="20sp"
             app:font="@{`AppleGaramond-BoldItalic.ttf`}"
             android:textColor="@{user.isFriend ? @color/colorFriend : @color/colorStranger}"
@@ -80,6 +80,12 @@
             app:font="@{`Roboto-Bold.ttf`}"
             android:visibility="@{user.isFriend ? View.VISIBLE : View.GONE}"
             />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Nickname"
+            android:text="@={user.nickname}"/>
     </LinearLayout>
 
 </layout>
